// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ABI value serialization round-trips nested form values through Cell and BoC 1`] = `
{
  "boc": "b5ee9c7241010101003500006500000007c00000000000000000000000000000000000000000000000000000000000000000044a817c80200000054000000c7048b94bef",
  "decoded": {
    "$": "NestedStruct",
    "counterAlias": "99",
    "summary": {
      "$": "ScalarFields",
      "count": "7",
      "enabled": true,
      "maybeAddress": null,
      "maybeCount": "42",
      "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
      "tonAmount": "1250000000",
    },
  },
}
`;

exports[`ABI value serialization round-trips dictionaries with numeric keys and coins values 1`] = `
{
  "boc": "b5ee9c7241010401001a000101c0010203cec00203000b650ee6b28020000bf20773594040d1f0d12b",
  "decoded": {
    "1": "1000000000",
    "7": "250000000",
  },
}
`;

exports[`ABI value serialization round-trips nested collections with struct values 1`] = `
{
  "boc": "b5ee9c7241010501005100030501c070040102010da00000000101c00401016003010da00000000701c004005d00000003e00000000000000000000000000000000000000000000000000000000000000000022540be4010000002a8731a6238",
  "decoded": {
    "$": "ComplexCollections",
    "nestedBatches": [
      {
        "7": [
          {
            "$": "ScalarFields",
            "count": "7",
            "enabled": true,
            "maybeAddress": null,
            "maybeCount": "42",
            "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
            "tonAmount": "1250000000",
          },
        ],
      },
    ],
    "records": [
      {
        "$": "ScalarFields",
        "count": "7",
        "enabled": true,
        "maybeAddress": null,
        "maybeCount": "42",
        "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
        "tonAmount": "1250000000",
      },
    ],
    "recordsByBatch": {
      "1": [
        {
          "$": "ScalarFields",
          "count": "7",
          "enabled": true,
          "maybeAddress": null,
          "maybeCount": "42",
          "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
          "tonAmount": "1250000000",
        },
      ],
    },
  },
}
`;

exports[`ABI value serialization round-trips arrays, lists, shaped tuples, and union variants 1`] = `
[
  {
    "boc": "b5ee9c7241010801005000024d0380000005e00000000000000000000000000000000000000000000000000000000000000000040104010980000000c0020109800000014003000900000001c00101c005010140060101c0070000fb8c4442",
    "decoded": {
      "$": "CollectionFields",
      "array": [
        "1",
        "2",
        "3",
      ],
      "list": [
        true,
        false,
        true,
      ],
      "tuple": [
        "11",
        true,
        "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
      ],
    },
    "name": "collections",
    "stable": true,
  },
  {
    "boc": "b5ee9c7241010101000300000140f6d24034",
    "decoded": null,
    "name": "null union",
    "stable": true,
  },
  {
    "boc": "b5ee9c7241010101003100005d80000003e00000000000000000000000000000000000000000000000000000000000000000022540be4010000002a83569693d",
    "decoded": {
      "$": "ScalarFields",
      "count": "7",
      "enabled": true,
      "maybeAddress": null,
      "maybeCount": "42",
      "recipient": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
      "tonAmount": "1250000000",
    },
    "name": "struct union",
    "stable": true,
  },
]
`;

exports[`ABI value serialization round-trips Cell and fixed-width bits 1`] = `
[
  {
    "boc": "b5ee9c72410102010006000100010002ab128a4458",
    "decoded": "b5ee9c72410101010003000002ab4e791e7a",
    "name": "Cell",
    "stable": true,
  },
  {
    "boc": "b5ee9c72410101010003000002ab4e791e7a",
    "decoded": "b5ee9c72410101010003000002ab4e791e7a",
    "name": "bits8",
    "stable": true,
  },
  {
    "boc": "b5ee9c72410102010006000100010002ab128a4458",
    "decoded": {
      "ref": "b5ee9c72410101010003000002ab4e791e7a",
    },
    "name": "Cell<bits8>",
    "stable": true,
  },
]
`;

exports[`ABI value serialization round-trips maps with address keys and Cell values 1`] = `
{
  "boc": "b5ee9c7241010301002d000101c0010145a170000000000000000000000000000000000000000000000000000000000000000002020002ab006d2d49",
  "decoded": {
    "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c": "b5ee9c72410101010003000002ab4e791e7a",
  },
}
`;

exports[`ABI value serialization formats TON runtime values as JSON-safe form values 1`] = `
{
  "address": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
  "builder": "b5ee9c72410101010003000002ab4e791e7a",
  "cell": "b5ee9c72410101010003000002ab4e791e7a",
  "dictionary": {
    "7": "1024",
  },
  "integer": "42",
  "slice": "b5ee9c72410101010003000002ab4e791e7a",
}
`;

exports[`ABI value serialization creates a serializable zero-filled default for fixed-width bits 1`] = `
{
  "boc": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "decoded": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "sample": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "sampleBits": 512,
  "sampleRefs": 0,
}
`;

exports[`ABI value serialization round-trips external and addr_none address values 1`] = `
{
  "external": "External<8:0>",
  "externalBoc": "b5ee9c7241010101000500000541001021550755",
  "none": "none",
  "noneBoc": "b5ee9c724101010100030000012094418655",
}
`;

exports[`ABI value serialization validates address kinds without rewriting the input 1`] = `
{
  "external": true,
  "externalAsInternal": false,
  "internal": true,
  "invalidExternalWidth": false,
  "noneAsAny": true,
  "noneAsInternal": false,
}
`;

exports[`ABI value serialization parses JSON and converts GRAM values at their precision boundaries 1`] = `
{
  "emptyJson": {
    "empty": true,
  },
  "formatted": "1.25",
  "invalidJsonFallback": {
    "invalid": true,
  },
  "json": {
    "value": "7",
  },
  "malformedNano": "",
}
`;

exports[`ABI value serialization creates stable defaults for scalar, collection, and TON-specific types 1`] = `
{
  "address": "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
  "bits512": "b5ee9c724101010100420000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010f06c53",
  "passthrough": "not-normalized",
  "uint256": "0",
  "unsupported": "",
}
`;
